# libfircc

./: .gitignore  .gitmodules  CHANGES  CMakeLists.txt  Doxyfile.template  INSTALL  LICENSE  README  README.md  SConstruct  channelinfoapi.txt  complete.doxygen  irc.geany  public.doxygen  raii-todo.txt  todo.txt
basecode/: anp_exceptions.h  basedefs.h  common.h  mgeinput.h  mgestr.h
cache/: channelcache.cpp  modeconv.cpp  networkcache.cpp  networkcache_userinterface.h  userinfo.cpp  utilities.cpp
cache/inc/: modeconv.h  userinfo.h  utilities.h
config/: config.cpp.cmake
core/: doxygen-config  doxygen-config.bak
core/modules/anp_dynamic_library/: anp_dynamic_library.h
core/modules/anp_dynamic_library_posix/src/: anp_dynamic_library_posix.cpp
core/modules/anp_threading/: anp_threading.h
core/modules/anp_threading/src/: anp_threading.cpp
core/modules/anp_threading_posix/src/: anp_threading_posix.cpp
core/modules/anp_threadsafequeue/: anp_threadsafequeue.h
core/modules/anp_threadsafequeue/src/: anp_threadsafequeue.cpp
core/modules/anp_timing/: anp_timing.h
core/modules/anp_timing_posix/src/: anp_timing_posix.cpp
core/modules/anp_workerthreads/: anp_jobqueue.h  anp_workerthread.h
core/modules/anp_workerthreads/src/: anp_jobqueue.cpp  anp_workerthread.cpp
core/modules/cache/: channelcache.h  ircnetworkcache.h  networkcache.h  networkcache_public.h  networkcache_userinterface.h  userinfo.h
core/modules/cache/inc/: ircchannel.h  utilities.h
core/modules/cache/src/: channelcache.cpp  ircchannel.cpp  ircnetworkcache.cpp  networkcache.cpp  userinfo.cpp  utilities.cpp
core/modules/frontend_interface/: core.h  core_api_c.h  core_api_cpp.h  core_frontend.h  firc.h
core/modules/frontend_interface/src/: core.cpp  core.cpp_ignore  core_api_c.cpp_fixme  core_api_cpp.cpp_ignore  firc.cpp
core/modules/messagereceiver/: messagereceiver.h
core/modules/messagereceiver/src/: messagereceiver.cpp
core/modules/network/: inetwork.h  messageprefix.h  network.h  network_frontend.h  networkeventdispatchers.h  networkevents.h  networkeventsubscribers.h  networkmanager_api_cpp.h
core/modules/network/inc/: messagesender.h
core/modules/network/src/: messagesender.cpp  network.cpp  networkmanager.cpp  networkmanager_api_cpp.cpp
core/modules/networkfactory/: networkfactory.h
core/modules/networkfactory/src/: networkfactory.cpp
core/modules/networkgroup/: networkgroup.h  networkgroupreadable.h
core/modules/networkgroup/src/: networkgroup.cpp
core/modules/networkmanager/: _old_capi_functions.txt  messageprefix.h  networkeventdispatchers.h  networkmanager.h  networkmanager_api_cpp.h  networkmanager_frontend.h  networkmanagerevents.h
core/modules/networkmanager/inc/: messagesender.h
core/modules/networkmanager/src/: messagesender.cpp  networkmanager.cpp  networkmanager_api_cpp.cpp
core/modules/plugin_interface/: fircapi.h  plugin_functions.h
core/modules/pluginmanager/: plugin_jobs.h  pluginmanager.h  pluginmanager_api_c.h  pluginmanager_api_cpp.h  pluginmanager_frontend.h
core/modules/pluginmanager/inc/: plugin.h  plugin_functions.h  plugin_jobs.h
core/modules/pluginmanager/src/: plugin.cpp  plugin_jobs.cpp  pluginmanager.cpp  pluginmanager_api_c.c_fixme  pluginmanager_api_cpp.cpp_removeme
core/modules/tcpconnection/: tcpconnection.h
core/modules/tcpconnection/src/: tcpconnection.cpp
core/modules/tokenizer/: tokenizer.h
core/modules/tokenizer/src/: tokenizer.cpp
frontend_console/modules/main/src/: main.cpp
frontend_console_c/modules/main/src/: main.c
frontend_console_cpp/modules/appeventdispatchers/: appeventdispatchers.h
frontend_console_cpp/modules/appevents/: appevents.h
frontend_console_cpp/modules/main/src/: main.cpp
include/fircc/: channelcache.h  config.h  fircc.h  inetwork.h  messageprefix.h  networkcache.h  networkcache_userinterface.h  networkeventdispatchers.h  networkevents.h  networkeventsubscribers.h  networkfactory.h  pluginmanager.h
network/: messageprefix.h  messagesender.cpp  network.cpp  networkeventsubscribers.h  networkfactory.cpp  tcpconnection.cpp  tcpconnection.h  tokenizer.cpp
network/inc/: messagesender.h  network.h  tcpconnection.h  tokenizer.h
oldWindowsImpl/core/: agent.cpp  agent.h  coreinitializer.cpp  coreinitializer.h  eventprocessor.cpp  eventprocessor.h  frontend_interface.cpp  frontend_interface.h  ircchannel.cpp  ircchannel.h  ircnetworkcache.cpp  ircnetworkcache.h  messagereceiver.cpp  messagereceiver.h  messagesender.cpp  messagesender.h  option.h  optionmanager.cpp  optionmanager.h  outputprocessor.cpp  outputprocessor.h  plugin.cpp  plugin.h  pluginexecuter.cpp  pluginexecuter.h  pluginmanager.cpp  pluginmanager.h  project_constants.cpp  project_constants.h  settingmanager.cpp  settingmanager.h  tcpconnection.cpp  tcpconnection.h  tokenizer.cpp
plugindev/pluginTest1/modules/main/src/: pluginTest1.cpp
plugindev/pluginTest2/modules/main/src/: pluginTest2.cpp
pluginmanager/: plugin.cpp  pluginmanager.cpp
pluginmanager/inc/: plugin.h  plugin_functions.h
samples/consoleapp/: CMakeLists.txt  main.cpp
test_parsing/modules/main/src/: main.cpp
test_threading/modules/main/src/: main_test_threading.cpp
tests/: CMakeLists.txt  eventdispatcher.cpp  test_reloadplugins.cpp  testimpl_plugin1.cpp  testimpl_plugin2.cpp
tests/inc/: network_testimpl.h
